--- a/nginx.conf
+++ b/nginx.conf
@@ -30,9 +30,9 @@ server {
     #
     location ~ \.php$ {
         root           html;
-        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_pass   php-fpm:9000;
         fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  /$document_root$fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
 
@@ -44,4 +44,3 @@ server {
     #}
 }
 
-root@e6787ffa809c:/etc/nginx/conf.d# 
