--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
     #
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /var/www/html;
     }
 
     # proxy the PHP scripts to Apache listening on 127.0.0.1:80
@@ -29,7 +29,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root           html;
+        root           /var/www/html;
         fastcgi_pass   php-fpm:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
