--- a/www.conf
+++ b/www.conf
@@ -20,8 +20,8 @@
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = nginx
-group = nginx
+user = webuser 
+group = webuser
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -366,7 +366,7 @@ pm.max_spare_servers = 3
 ;       possible. However, all PHP paths will be relative to the chroot
 ;       (error_log, sessions.save_path, ...).
 ; Default Value: not set
-;chroot =
+; chroot = 
 
 ; Chdir to this directory at the start.
 ; Note: relative path can be used.
