--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,48 @@
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  localhost;
-
-    #charset koi8-r;
-    #access_log  /var/log/nginx/host.access.log  main;
+    listen      80;
+    listen [::]:80;
+    server_name dankterminal.com www.dankterminal.com;
 
     location / {
-	allw all;
-        root   /var/www/html;
-        index  index.php index.html index.htm;
+        rewrite ^ https://$host$request_uri? permanent;
     }
 
-    #error_page  404              /404.html;
-
-    # redirect server error pages to the static page /50x.html
-    #
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /var/www/html;
+    #for certbot challenges (renewal process)
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /data/letsencrypt;
     }
+}
 
-    # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-    #
-    #location ~ \.php$ {
-    #    proxy_pass   http://127.0.0.1;
-    #}
+#https://ohhaithere.com
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name dankterminal.com;
 
-    # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-    #
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/ohhaithere.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ohhaithere.com/privkey.pem;
+
+    ssl_buffer_size 8k;
+
+    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    ssl_ecdh_curve secp384r1;
+    ssl_session_tickets off;
+
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8;
+
+    return 301 https://www.dankterminal.com$request_uri;
     location ~ \.php$ {
         root           /var/www/html;
         fastcgi_pass   php-fpm:9000;
@@ -36,12 +50,44 @@ server {
         fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
         include        fastcgi_params;
     }
-
-    # deny access to .htaccess files, if Apache's document root
-    # concurs with nginx's one
-    #
-    #location ~ /\.ht {
-    #    deny  all;
-    #}
 }
 
+#https://www.dankterminal.com
+server {
+    server_name www.dankterminal.com;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_tokens off;
+
+    ssl on;
+
+    ssl_buffer_size 8k;
+    ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDH+AESGCM:ECDH+AES256:ECDH+AES128:DH+3DES:!ADH:!AECDH:!MD5;
+
+    ssl_ecdh_curve secp384r1;
+    ssl_session_tickets off;
+
+    # OCSP stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 8.8.8.8 8.8.4.4;
+
+    ssl_certificate /etc/letsencrypt/live/dankterminal.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dankterminal.com/privkey.pem;
+
+    root /var/www/html;
+    index index.html;
+
+    location ~ \.php$ {
+        root           /var/www/html;
+        fastcgi_pass   php-fpm:9000;
+        fastcgi_index  index.php;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+}
