--- a/nginx.conf
+++ b/nginx.conf
@@ -10,11 +10,11 @@ server {
     #for certbot challenges (renewal process)
     location ~ /.well-known/acme-challenge {
         allow all;
-        root /data/letsencrypt;
+        root /etc/letsencrypt;
     }
 }
 
-#https://ohhaithere.com
+#https://dankterminal.com
 server {
     listen 443 ssl http2;
     listen [::]:443 ssl http2;
@@ -22,8 +22,8 @@ server {
 
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/ohhaithere.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ohhaithere.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/dankterminal.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/dankterminal.com/privkey.pem;
 
     ssl_buffer_size 8k;
 
@@ -60,7 +60,7 @@ server {
 
     server_tokens off;
 
-    ssl on;
+    #ssl on;
 
     ssl_buffer_size 8k;
     ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
@@ -81,7 +81,7 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/dankterminal.com/privkey.pem;
 
     root /var/www/html;
-    index index.html;
+    index index.php;
 
     location ~ \.php$ {
         root           /var/www/html;
